--- a/src/style/iconfont.css
+++ b/src/style/iconfont.css
@@ -1,16 +1,13 @@
 @font-face {
-    font-family: 'iconfont';  /* project id 3180646 */
-    src: url('');
-    src: url('?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_3180646_7qjf0jqsqsb.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_3180646_7qjf0jqsqsb.woff') format('woff'),
-    url('//at.alicdn.com/t/font_3180646_7qjf0jqsqsb.ttf') format('truetype'),
-    url('#iconfont') format('svg');
+    font-family: 'iconfont';  /* Project id 3180646 */
+    src: url('//at.alicdn.com/t/font_3180646_urt8yyu6oyk.woff2?t=1644750512536') format('woff2'),
+         url('//at.alicdn.com/t/font_3180646_urt8yyu6oyk.woff?t=1644750512536') format('woff'),
+         url('//at.alicdn.com/t/font_3180646_urt8yyu6oyk.ttf?t=1644750512536') format('truetype');
   }
 
 .iconfont{
     font-family:"iconfont" !important;
-    font-size:16px;font-style:normal;
+    font-size:0.16rem;font-style:normal;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;}
