完成商品页面

--- a/src/style/viriables.scss
+++ b/src/style/viriables.scss
@@ -1,2 +1,9 @@
 $content-fontcolor: #333;
 $content-bgColor: #f1f1f1;
+$search-bgColor: #F5F5F5;
+$search-fontColor: #333333;
+$bgColor: #FFFFFF;
+$highlight-fontColor: #E93B3B;
+$light-fontColor: #999999;
+$medium-fontColor: #666;
+$btn-bgColor: #0091FF;
