--- a/src/style/viriables.scss
+++ b/src/style/viriables.scss
@@ -7,3 +7,4 @@ $highlight-fontColor: #E93B3B;
 $light-fontColor: #999999;
 $medium-fontColor: #666;
 $btn-bgColor: #0091FF;
+$isChecked-bgColor: #0091FF;
